-fixed mission mobile/tablet;

--- a/sites/all/themes/zen/cfc/source/sass/pages/whoWeAre/_whoWeAre.scss
+++ b/sites/all/themes/zen/cfc/source/sass/pages/whoWeAre/_whoWeAre.scss
@@ -12,7 +12,7 @@
     .view {
       padding: 0 0 0 0;
       max-width: 100% !important;
-      height: 100vh !important;
+      height: 100vh;
     }
     .field-name-body {
 
